--- a/site_de_floricultura/index.html
+++ b/site_de_floricultura/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Josefin+Slab:wght@500&family=MonteCarlo&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <!---------------------header----------------------->
@@ -52,6 +55,18 @@
             </div>
         
     </section>
+
+ <!----------------------Banner 2--------------------------->
+
+ <section class="banner2">
+    <div class="background">
+        <h1>Para todos,<br>para toda ocasião</h1>
+    </div>
+ </section>
+
+ <!-----------------------Fale conosco---------------------->
+
+ 
     
  <!----------------------JavaScript------------------------->
     <script>
