--- a/site_de_floricultura/index.html
+++ b/site_de_floricultura/index.html
@@ -66,7 +66,24 @@
 
  <!-----------------------Fale conosco---------------------->
 
- 
+ <section class="faleconosco">
+    <h1>Fale Conosco!</h1>
+    <form class="formulario">
+        <div class="left">
+            <label for="nome">Nome</label>
+            <input type="text" placeholder="digite seu nome" class="nome">
+            <label for="email">Email</label>
+            <input type="email" placeholder="digite seu email" class="email">
+            <label for="telefone">Telefone</label>
+            <input type="tel" placeholder="digite seu número de telefone" class="telefone">
+        </div>
+        <div class="right">
+            <label for="mensagem">Digite sua mensagem</label>
+            <textarea type="textarea" class="mensagem" placeholder="digite sua mensagem"></textarea>
+        </div>
+        <button>Enviar</button>
+    </form>
+ </section>
     
  <!----------------------JavaScript------------------------->
     <script>
